k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: node-app
        image: registry.gitlab.com/daniela-estupinan/devsu-demo-devops-nodejs:latest
        ports:
          - containerPort: 3000
